We can dismiss alert banner in non-live pages

--- a/lib/communote_web/templates/layout/app.html.heex
+++ b/lib/communote_web/templates/layout/app.html.heex
@@ -1,6 +1,6 @@
 <main class="container mx-auto pt-10">
   <%= if get_flash(@conn, :info) do %>
-    <div class="w-full text-white bg-blue-500 mb-10" role="alert" phx-click="lv:clear-flash" phx-value-key="info">
+    <div id="flash-banner" class="w-full text-white bg-blue-500 mb-10" role="alert">
         <div class="container flex items-center justify-between px-6 py-4 mx-auto">
             <div class="flex">
                 <svg viewBox="0 0 40 40" class="w-6 h-6 fill-current">
@@ -12,7 +12,7 @@
                 </p>
             </div>
 
-            <button class="p-1 transition-colors duration-200 transform rounded-md hover:bg-opacity-25 hover:bg-gray-600 focus:outline-none">
+            <button id="alert-close-btn" class="p-1 transition-colors duration-200 transform rounded-md hover:bg-opacity-25 hover:bg-gray-600 focus:outline-none">
                 <svg class="w-5 h-5" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M6 18L18 6M6 6L18 18" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
@@ -22,7 +22,7 @@
   <% end %>
 
   <%= if get_flash(@conn, :danger) do %>
-    <div class="w-full text-white bg-red-500 mb-10" role="alert" phx-click="lv:clear-flash" phx-value-key="danger">
+    <div id="flash-banner" class="w-full text-white bg-red-500 mb-10" role="alert">
         <div class="container flex items-center justify-between px-6 py-4 mx-auto">
             <div class="flex">
                 <svg viewBox="0 0 40 40" class="w-6 h-6 fill-current">
@@ -32,7 +32,7 @@
                 <p class="mx-3"><%= get_flash(@conn, :danger) %></p>
             </div>
 
-            <button class="p-1 transition-colors duration-200 transform rounded-md hover:bg-opacity-25 hover:bg-gray-600 focus:outline-none">
+            <button id="alert-close-btn" class="p-1 transition-colors duration-200 transform rounded-md hover:bg-opacity-25 hover:bg-gray-600 focus:outline-none">
                 <svg class="w-5 h-5" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M6 18L18 6M6 6L18 18" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
