--- a/lib/communote_web/live/note_live/show.html.heex
+++ b/lib/communote_web/live/note_live/show.html.heex
@@ -60,6 +60,15 @@
           <span class="mx-1">Download</span>
         <% end %>
 
+        <.live_component
+          module={CommunoteWeb.ReviewLive.ButtonComponent}
+          id={:review}
+          action={@live_action}
+          note={@note}
+          review={@review}
+          current_user={assigns.current_user}
+        />
+
         <%= live_patch to: Routes.note_show_path(@socket, :new_report, @note.slug), class: "flex items-center px-2 py-2 font-medium tracking-wide text-white capitalize transition-colors duration-200 transform bg-red-600 rounded-md hover:bg-red-500 focus:outline-none focus:ring focus:ring-red-300 focus:ring-opacity-80" do %>
           <i class="fas fa-warning"></i>
           <span class="mx-1">Report</span>
