--- a/lib/communote_web/templates/layout/app.html.heex
+++ b/lib/communote_web/templates/layout/app.html.heex
@@ -1,4 +1,4 @@
-<main class="container mx-auto pt-10">
+<main class="mx-auto pt-10">
   <%= if get_flash(@conn, :info) do %>
     <div id="flash-banner" class="w-full text-white bg-blue-500 mb-10" role="alert">
         <div class="container flex items-center justify-between px-6 py-4 mx-auto">
