--- a/lib/communote_web/templates/layout/root.html.heex
+++ b/lib/communote_web/templates/layout/root.html.heex
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="csrf-token" content={csrf_token_value()}>
-    <%= live_title_tag assigns[:page_title] || "Communote", suffix: " · Phoenix Framework" %>
+    <%= live_title_tag assigns[:page_title] || "Communote", suffix: "" %>
     <link phx-track-static rel="stylesheet" href={Routes.static_path(@conn, "/assets/app.css")}/>
+    <link rel="shortcut icon" type="image/jpg" href="/images/favicon-32.png"/>
     <script defer phx-track-static type="text/javascript" src={Routes.static_path(@conn, "/assets/app.js")}></script>
     <script src="https://kit.fontawesome.com/1ebc69f3a2.js" crossorigin="anonymous"></script>
   </head>
