--- a/lib/communote_web/live/review_live/button_component.html.heex
+++ b/lib/communote_web/live/review_live/button_component.html.heex
@@ -1,5 +1,5 @@
 <span id="review-btn" class="flex items-center p-2 font-medium tracking-wide text-white capitalize transition-colors duration-200 transform bg-gray-600 rounded-md hover:bg-gray-500 focus:outline-none focus:ring focus:ring-yellow-300 focus:ring-opacity-80">
   <%= for x <- 1..5 do %>
-    <i class={@star_class.(@score, x)} phx-target={@myself} phx-click="clicked" phx-click="clicked" phx-value-score={x}></i>
+    <i class={@star_class.(@score, x)} phx-target={@myself} phx-click="clicked" phx-value-score={x}></i>
   <%= end %>
 </span>
