--- a/lib/communote_web/live/note_live/index.html.heex
+++ b/lib/communote_web/live/note_live/index.html.heex
@@ -2,11 +2,8 @@
 Notes for <%= @code %>
 </h1>
 
-<ul class="list-none grid grid-cols-1 gap-2 md:grid-cols-3 md:gap-4 lg:grid-cols-4 lg:gap-6 py-10 dark:text-white">
-  <%= for year <- Enum.chunk_by(@notes, fn note -> note.year.year end) do %>
-    <h2 class="text-2xl font-bold col-span-full underline underline-offset-8 decoration-4 decoration-purple-800 dark:decoration-green-600"><%= List.first(year).year.year %></h2>
-    <%= for note <- year do %>
-      <%= live_component CommunoteWeb.Live.NoteLive.NoteCard, note: note %>
-    <% end %>
-  <% end %>
-</ul>
+<.live_component
+  module={CommunoteWeb.NoteLive.GridComponent}
+  id={:grid}
+  notes={@notes}
+/>
