--- a/lib/communote_web/templates/user_confirmation/new.html.heex
+++ b/lib/communote_web/templates/user_confirmation/new.html.heex
@@ -8,7 +8,7 @@
 
         <div class="w-full mt-4">
           <%= label f, :email, class: "text-gray-700 dark:text-gray-200" %>
-          <%= email_input f, :email, required: true, class: "block w-full px-4 py-2 mt-2 dark:text-gray-400 text-gray-700 placeholder-gray-500 bg-white border rounded-md dark:bg-gray-800 dark:border-gray-600 dark:placeholder-gray-400 focus:border-blue-400 dark:focus:border-blue-300 focus:ring-opacity-40 focus:outline-none focus:ring focus:ring-blue-300" %>
+          <%= email_input f, :email, required: true, value: @email, class: "block w-full px-4 py-2 mt-2 dark:text-gray-400 text-gray-700 placeholder-gray-500 bg-white border rounded-md dark:bg-gray-800 dark:border-gray-600 dark:placeholder-gray-400 focus:border-blue-400 dark:focus:border-blue-300 focus:ring-opacity-40 focus:outline-none focus:ring focus:ring-blue-300" %>
         </div>
 
         <div class="w-full tracking-wide mt-4">
@@ -18,9 +18,9 @@
   </div>
 
   <div class="flex items-center justify-center py-4 text-center bg-gray-50 dark:bg-gray-700">
-      <span class="text-sm text-gray-600 dark:text-gray-200">You can also</span>
-      <%= link "Register", to: Routes.user_registration_path(@conn, :new), class: "mx-2 text-sm font-bold text-blue-500 dark:text-blue-400 hover:underline" %>
-      <span class="text-sm text-gray-600 dark:text-gray-200">or</span>
-      <%= link "Log in", to: Routes.user_session_path(@conn, :new), class: "mx-2 text-sm font-bold text-blue-500 dark:text-blue-400 hover:underline" %>
+    <span class="text-sm text-gray-600 dark:text-gray-200">You can also</span>
+    <%= link "Register", to: Routes.user_registration_path(@conn, :new), class: "mx-2 text-sm font-bold text-blue-500 dark:text-blue-400 hover:underline" %>
+    <span class="text-sm text-gray-600 dark:text-gray-200">or</span>
+    <%= link "Log in", to: Routes.user_session_path(@conn, :new), class: "mx-2 text-sm font-bold text-blue-500 dark:text-blue-400 hover:underline" %>
   </div>
 </div>
