--- a/lib/communote_web/templates/layout/app.html.heex
+++ b/lib/communote_web/templates/layout/app.html.heex
@@ -3,9 +3,7 @@
     <div id="flash-banner" class="w-full text-white bg-blue-500 mb-10" role="alert">
         <div class="container flex items-center justify-between px-6 py-4 mx-auto">
             <div class="flex">
-                <svg viewBox="0 0 40 40" class="w-6 h-6 fill-current">
-                    <path d="M20 3.33331C10.8 3.33331 3.33337 10.8 3.33337 20C3.33337 29.2 10.8 36.6666 20 36.6666C29.2 36.6666 36.6667 29.2 36.6667 20C36.6667 10.8 29.2 3.33331 20 3.33331ZM21.6667 28.3333H18.3334V25H21.6667V28.3333ZM21.6667 21.6666H18.3334V11.6666H21.6667V21.6666Z"></path>
-                </svg>
+                <i class="fas fa-circle-info py-1"/>
 
                 <p class="mx-3">
                   <%= get_flash(@conn, :info) %>
@@ -21,15 +19,13 @@
     </div>
   <% end %>
 
-  <%= if get_flash(@conn, :danger) do %>
+  <%= if get_flash(@conn, :error) do %>
     <div id="flash-banner" class="w-full text-white bg-red-500 mb-10" role="alert">
         <div class="container flex items-center justify-between px-6 py-4 mx-auto">
             <div class="flex">
-                <svg viewBox="0 0 40 40" class="w-6 h-6 fill-current">
-                    <path d="M20 3.36667C10.8167 3.36667 3.3667 10.8167 3.3667 20C3.3667 29.1833 10.8167 36.6333 20 36.6333C29.1834 36.6333 36.6334 29.1833 36.6334 20C36.6334 10.8167 29.1834 3.36667 20 3.36667ZM19.1334 33.3333V22.9H13.3334L21.6667 6.66667V17.1H27.25L19.1334 33.3333Z"></path>
-                </svg>
+                <i class="fas fa-warning py-1"/>
 
-                <p class="mx-3"><%= get_flash(@conn, :danger) %></p>
+                <p class="mx-3"><%= get_flash(@conn, :error) %></p>
             </div>
 
             <button id="alert-close-btn" class="p-1 transition-colors duration-200 transform rounded-md hover:bg-opacity-25 hover:bg-gray-600 focus:outline-none">
