--- a/lib/communote_web/templates/layout/app.html.heex
+++ b/lib/communote_web/templates/layout/app.html.heex
@@ -1,6 +1,6 @@
-<main class="mx-auto pt-10">
+<main class="mx-auto">
   <%= if get_flash(@conn, :info) do %>
-    <div id="flash-banner" class="w-full text-white bg-blue-500 mb-10" role="alert">
+    <div id="flash-banner" class="w-full text-white bg-blue-500" role="alert">
         <div class="container flex items-center justify-between px-6 py-4 mx-auto">
             <div class="flex">
                 <i class="fas fa-circle-info py-1"/>
@@ -20,7 +20,7 @@
   <% end %>
 
   <%= if get_flash(@conn, :error) do %>
-    <div id="flash-banner" class="w-full text-white bg-red-500 mb-10" role="alert">
+    <div id="flash-banner" class="w-full text-white bg-red-500" role="alert">
         <div class="container flex items-center justify-between px-6 py-4 mx-auto">
             <div class="flex">
                 <i class="fas fa-warning py-1"/>
@@ -37,5 +37,7 @@
     </div>
   <% end %>
 
-  <%= @inner_content %>
+    <div class="pt-10">
+        <%= @inner_content %>
+    </div>
 </main>
